# jumping

./: CHANGELOG.md  Cargo.toml  README.md  README_EN.md  install.sh  uninstall.sh
.github/workflows/: ci.yml
src/: app.rs  entry.rs  init.rs  main.rs  ui.rs
