[package]
name = "jumping"
version = "0.2.1"
edition = "2024"
description = "A lightweight TUI directory navigation tool"
license = "MIT"
repository = "https://github.com/harkerhand/jumping"
readme = "README.md"
keywords = ["tui", "directory", "navigation", "terminal"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["events"] }
clap = { version = "4.6.0", features = ["derive"] }
libc = "0.2.183"
